# figpublish

./: .pre-commit-config.yaml  README.rst  pyproject.toml
figpublish/: __init__.py
