[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "figpublish/_version.py"

[project]
name = "figpublish"
dynamic = ["version"]
authors = [{name = "Jacan Chaplais"}]
maintainers = [{name = "Jacan Chaplais"}]
description = "Apply formatting to make figures publish-quality."
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
dependencies = [
    "plotly"
]

[project.urls]
repository = "https://github.com/jacanchaplais/figpublish"

[tool.black]
line-length = 79

[tool.mypy]
mypy_path = "figpublish"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pyright]
include = ["figpublish"]
exclude = ["**/node_modules", "**/__pycache__"]
defineConstant = { DEBUG = true }

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"
pythonPlatform = "Linux"
